--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,7 @@
     // "csv (semicolon)",
     // "tab",
     // "tsv"
-  ]
+  ],
+  "SAP HANA Project Explorer.bind.confirm existing service": false,
+  "SAP HANA Project Explorer.bind.confirm automatic undeployment": false
 }
