--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@cap-js/hana": "^1",
     "@sap-cloud-sdk/http-client": "^3.24.0",
     "@sap-cloud-sdk/resilience": "^3.24.0",
     "@sap/cds": "^8",
     "express": "^4",
-    "@cap-js/hana": "^1"
+    "@sap/xssec": "^4"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.8.0",
-    "@cap-js/sqlite": "^1"
+    "@cap-js/sqlite": "^1",
+    "@sap/cds-dk": "^8"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds-serve",
+    "deploy": "npm run build && npm run build-mbt && npm run cf-deploy",
+    "build": "cds build --production",
+    "build-mbt": "mbt build -t gen --mtar mta.tar",
+    "cf-deploy": "cf deploy gen/mta.tar",
+    "undeploy": "cf undeploy event_management_system"
   },
   "cds": {
     "requires": {
@@ -31,6 +38,10 @@
           "username": "CAP_BOOTCAMP_S4_API_USER",
           "password": "WS$UGgbhkG8EEvUpccCgmedHhmHRiWeZVGfvcUPE"
         }
+      },
+      "[production]": {
+        "db": "hana",
+        "auth": "mocked"
       }
     },
     "sql": {
